# yolov7-tensorrt-cpp

./: .gitattributes  CMakeLists.txt  README.md  main.cpp
classes/: character.names
controller/: yolov7controller.cpp  yolov7controller.h
weights/: lp_character.engine  lp_character.pt  lp_character.wts  yolov7-tiny.engine  yolov7-tiny.wts
yolov7/: CMakeLists.txt
yolov7/include/: modelAPI.h
yolov7/src/: modelAPI.cpp
